fixed progress bar not showing up

--- a/dev/public/styles/main.scss
+++ b/dev/public/styles/main.scss
@@ -87,7 +87,7 @@ button {
   left: 0;
   width: 100%;
   height: 8vh;
-  z-index: 1000;
+  z-index: 100;
   background-color: rgba($color: #f3f3f3, $alpha: 0.8);
   backdrop-filter: blur(6px);
   display: flex;
@@ -114,7 +114,7 @@ button {
   background: rgba($color: #fff, $alpha: 0.99);
   top: 0;
   left: 0;
-  z-index: 100000;
+  z-index: 10000;
   grid-template-columns: 1fr 1fr;
   .canvas-container {
     display: flex;
